# ukraine-forecast-comparison

./: .gitignore  LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: generate-forecast-code-python-checkpoint.ipynb
R/: GPT-5.1-Pro.R
analysis/: compare-forecasts.R
data/: brc-simulation.csv  forecast-evaluation-total.csv  forecast-evaluation.csv  forecast-gpt-4.1.rds  visas-weekly-test.csv  visas-weekly-training.csv  visas-weekly.csv
forecasts/: gpt-3.5-turbo.R  gpt-3.5-turbo.txt  gpt-4.1.R  gpt-4.1.txt  gpt-4.R  gpt-4.txt  gpt-4o.R  gpt-4o.txt  gpt-5.2-pro.R  o1.R  o1.txt  o3.R  o3.txt
forecasts/.ipynb_checkpoints/: gpt-3.5-turbo-checkpoint.R  gpt-4.1-checkpoint.R  gpt-5.2-checkpoint.R
forecasts/data/: forecast-gpt-3.5-turbo.rds  forecast-gpt-4o.rds
forecasts2/: claude-sonnet-4.5.R  claude-sonnet-4.5.md  gemini-3-pro.R  gemini-3-pro.md  gpt-3.5-turbo.R  gpt-3.5-turbo.md  gpt-4.1.R  gpt-4.1.md  gpt-4.R  gpt-4.md  gpt-4o.R  gpt-4o.md  gpt-5.2.R  gpt-5.2.md  o1.R  o1.md  o3.R  o3.md
forecasts2/data/: claude-sonnet-4.5-forecast.csv  gemini-pro-3-forecast.csv  gpt-3.5-turbo-forecast.csv  gpt-3.5-turbo-forecast.rds  gpt-5.2-forecast.csv
prep/: generate-forecast-code.ipynb  prep-visa-data.R
simulations/: claude-sonnet-4.5.R  claude-sonnet-4.5.md  gemini-pro-3-forecast.rds  gemini-pro-3.R  gemini-pro-3.md  gpt-3.5-turbo.R  gpt-3.5-turbo.md  gpt-4.1.R  gpt-4.1.md  gpt-4.R  gpt-4.md  gpt-4o.R  gpt-4o.md  gpt-5.2-codex.R  gpt-5.2-codex.md  gpt-5.2-pro.R  gpt-5.2-pro.md  gpt-5.2.R  gpt-5.2.md  o1.R  o1.md  o3.R  o3.md
(+1 files in other folders)
